feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#128)
* feat: Spring Boot upgrade to 3.3.13: Changes by OpenRewrite plugin. Bump atp libraries versions to upgraded to Spring Boot 3.3.13 ones. 

* fix: Some code check errors/warns are fixed. jakarta.servlet-api:6.0.0 dependency is added.

* fix(deps): Bump dependencies: logback to 1.5.32, mockito-core to 5.23.0, mockito-inline to 5.2.0, javers to 7.9.0, undertow to 2.3.21.Final. Add org.hibernate.orm:hibernate-core:6.5.3.Final and io.hypersistence:hypersistence-utils-hibernate-63:3.9.9.

* fix: Migrate code from httpclient4 to httpclient5. Bump dependencies: httpclient5 to 5.4.4, httpcore5 to 5.3.4.

* fix: openapi-generator-maven-plugin: configuration is upgraded for Spring Boot 3.3.13 and refactored. Plugin version is changed to 7.9.0.

* fix: Migration to spring-kafka:3.3.3 - removed methods are replaced according to modern concepts. Config variable is added for retry backoff maxAttempts.

* fix: Keycloak usages are removed.

* fix: Usages of obsolete Liquibase method are removed.

* fix: Tests are migrated to httpclient5.

* fix: Pact tests (consumer side) are fixed. Instead of au.com.dius.pact.consumer:junit:4.1.23, junit5:4.6.15 dependency is added.

* fix: SPRING_PROFILES config property is renamed to ACTIVE_PROFILES_SPRING.

* fix: ConfigTestBean: @MockitoSettings(strictness = Strictness.LENIENT) is added to avoid UnnecessaryStubbing exception.

* fix: Date formatting is fixed in tests: system Locale is used. Code is cleansed.

* build: Test configuration template is fixed.

* fix: Stubs are fixed according to httpclient5 packages structure.

* fix: RestClientExecutorImplTest#prepareRestRequest: expectation is fixed according to RestClientExecutorImpl changes.

* fix(deps): Bump junit-jupiter version to 5.10.5, au.com.dius.pact.provider:junit5spring to 4.6.15, kotlin-stdlib to 1.9.25, testcontainers to 1.20.4, liquibase-core to 4.27.0, jackson to 2.18.6. Also: maven-compiler-plugin: ver