@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -31,7 +31,6 @@ import org.qubership.atp.mia.model.configuration.ProjectConfiguration;
 import org.qubership.atp.mia.model.ei.ExportImportCommandPrefix;
 import org.qubership.atp.mia.model.ei.ExportImportCommonConfiguration;
 import org.qubership.atp.mia.model.ei.ExportImportEntities;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import lombok.extern.slf4j.Slf4j;
@@ -43,7 +42,7 @@ public class ImportLoaderCommonConfiguration extends ImportLoader<
         CommonConfiguration,
         ExportImportCommonConfiguration> {
 
-    public ImportLoaderCommonConfiguration(@Autowired ObjectLoaderFromDiskService objectLoaderFromDiskService) {
+    public ImportLoaderCommonConfiguration(ObjectLoaderFromDiskService objectLoaderFromDiskService) {
         super(objectLoaderFromDiskService);
     }
 
@@ -104,7 +103,7 @@ public class ImportLoaderCommonConfiguration extends ImportLoader<
     public void importEntity(ProjectConfiguration projectConfiguration, ExportImportData importData, Path path) {
         List<ExportImportCommonConfiguration> configurations = loadConfiguration(importData, path);
         if (!configurations.isEmpty()) {
-            ExportImportCommonConfiguration configuration = configurations.get(0);
+            ExportImportCommonConfiguration configuration = configurations.getFirst();
             projectConfiguration.setCommonConfiguration(toEntity(projectConfiguration, configuration));
         }
     }
