@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -22,12 +22,13 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.qubership.atp.mia.model.Constants.DEFAULT_PROJECT_NAME;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ThreadLocalRandom;
 
-import org.junit.Assert;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -42,7 +43,7 @@ import org.qubership.atp.mia.repo.driver.PostgreSqlDriver;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 
-//@Disabled("Temporarily disabled for refactoring")
+@Disabled("Temporarily disabled for refactoring")
 public class MiaExecutionControllerTest extends BaseIntegrationTestConfiguration {
 
     @Autowired
@@ -54,30 +55,30 @@ public class MiaExecutionControllerTest extends BaseIntegrationTestConfiguration
 
     @BeforeEach
     public void beforeMiaExecutionControllerTest() {
-        randomId = (int) (Math.random() * 1000);
+        randomId = (int) (ThreadLocalRandom.current().nextDouble() * 1000);
         UUID envId = UUID.randomUUID();
         UUID systemId = UUID.randomUUID();
         System testSystem2 = System.builder()
                 .id(systemId)
                 .name(TEST_SYSTEM_NAME + randomId)
                 .environmentId(envId)
-                .connections(Arrays.asList())
+                .connections(List.of())
                 .build();
         Environment testEnvironment2 = Environment.builder()
                 .projectId(projectId.get())
                 .id(envId)
                 .name(TEST_ENVIRONMENT_NAME + randomId)
-                .systems(Arrays.asList(testSystem2))
+                .systems(List.of(testSystem2))
                 .build();
         Project testProject2 = Project.builder()
                 .id(projectId.get())
                 .name(DEFAULT_PROJECT_NAME + randomId)
-                .environments(Arrays.asList(testEnvironment2.getId()))
+                .environments(List.of(testEnvironment2.getId()))
                 .build();
         Mockito.when(environmentsService.getEnvironmentsByProject(eq(projectId.get())))
-                .thenReturn(Arrays.asList(testEnvironment2));
+                .thenReturn(List.of(testEnvironment2));
         Mockito.when(environmentsService.getEnvironmentsFull(eq(envId), eq(projectId.get()))).thenReturn(testEnvironment2);
-        Mockito.when(environmentsService.getProjects()).thenReturn(Arrays.asList(testProject2));
+        Mockito.when(environmentsService.getProjects()).thenReturn(List.of(testProject2));
         Mockito.when(environmentsService.getProject(eq(projectId.get()))).thenReturn(testProject2);
         miaContext.setContext(projectId.get(), null);
     }
@@ -97,7 +98,7 @@ public class MiaExecutionControllerTest extends BaseIntegrationTestConfiguration
         FlowData flowData = new FlowData();
         flowData.setParameters(parameters);
         request1.setFlowData(flowData);
-        Assert.assertEquals(expectedValue, miaExecutionController.getNextBillDate(projectId.get(), "Test", request1));
+        Assertions.assertEquals(expectedValue, miaExecutionController.getNextBillDate(projectId.get(), "Test", request1));
     }
 }
 
