@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -28,10 +28,10 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -59,7 +59,7 @@ import io.undertow.util.FileUtils;
 
 public class ExportTest extends ExportImportBaseTest {
 
-    private final Path testPath = Paths.get("src/test/resources/ei/export/");
+    private final Path testPath = Path.of("src/test/resources/ei/export/");
     private final ObjectMapper mapper = new ObjectMapper();
 
     @AfterEach
@@ -68,7 +68,7 @@ public class ExportTest extends ExportImportBaseTest {
     }
 
     @Test
-    public void export_allSections() throws IOException {
+    public void export_allSections() {
         //Prepare
         Map<String, Set<String>> importExportEntities = new HashMap<>();
         importExportEntities.put(ExportImportEntities.MIA_SECTION.getValue(),
@@ -110,7 +110,7 @@ public class ExportTest extends ExportImportBaseTest {
     public void export_whenCommonConfiguration_thenOnlyItExported() {
         //Prepare
         Map<String, Set<String>> importExportEntities = new HashMap<>();
-        importExportEntities.put(ExportImportEntities.MIA_COMMON_CONFIGURATION.getValue(), new HashSet<String>(){{
+        importExportEntities.put(ExportImportEntities.MIA_COMMON_CONFIGURATION.getValue(), new HashSet<>() {{
             add(projectId.get().toString());
         }});
         exportScope.get().setEntities(importExportEntities);
@@ -127,7 +127,7 @@ public class ExportTest extends ExportImportBaseTest {
     public void export_whenHeaderConfiguration_thenOnlyItExported() {
         //Prepare
         Map<String, Set<String>> importExportEntities = new HashMap<>();
-        importExportEntities.put(ExportImportEntities.MIA_HEADER_CONFIGURATION.getValue(), new HashSet<String>(){{
+        importExportEntities.put(ExportImportEntities.MIA_HEADER_CONFIGURATION.getValue(), new HashSet<>(){{
             add(projectId.get().toString());
         }});
         exportScope.get().setEntities(importExportEntities);
@@ -144,7 +144,7 @@ public class ExportTest extends ExportImportBaseTest {
     public void export_whenPotHeaderConfiguration_thenOnlyItExported() {
         //Prepare
         Map<String, Set<String>> importExportEntities = new HashMap<>();
-        importExportEntities.put(ExportImportEntities.MIA_POT_HEADER_CONFIGURATION.getValue(), new HashSet<String>(){{
+        importExportEntities.put(ExportImportEntities.MIA_POT_HEADER_CONFIGURATION.getValue(), new HashSet<>(){{
             add(projectId.get().toString());
         }});
         exportScope.get().setEntities(importExportEntities);
@@ -168,14 +168,14 @@ public class ExportTest extends ExportImportBaseTest {
 
         //Prepare
         Map<String, Set<String>> importExportEntities = new HashMap<>();
-        Set<String> directoriesToExport = new HashSet<String>() {{
+        Set<String> directoriesToExport = new HashSet<>() {{
             add(rootDirectory0.getId().toString());
             add(rootDirectory0_Directory1.getId().toString());
             add(rootDirectory0_Directory2.getId().toString());
         }};
         importExportEntities.put(ExportImportEntities.MIA_DIRECTORY.getValue(), directoriesToExport);
 
-        Set<String> filesToExport = new HashSet<String>() {{
+        Set<String> filesToExport = new HashSet<>() {{
             add(rootDirectory0_Directory1_File2.getId().toString());
             add(rootDirectory0_Directory1_File3.getId().toString());
         }};
@@ -220,7 +220,7 @@ public class ExportTest extends ExportImportBaseTest {
                 .map(UUID::toString)
                 .collect(Collectors.toSet());
 
-        exportScope.get().setEntities(new HashMap<String, Set<String>>() {{
+        exportScope.get().setEntities(new HashMap<>() {{
             put(ExportImportEntities.MIA_DIRECTORY.getValue(), directoryIdSet);
             put(ExportImportEntities.MIA_FILES.getValue(), fileIdSet);
         }});
@@ -324,12 +324,12 @@ public class ExportTest extends ExportImportBaseTest {
 
         int actual = getFiles(path.toFile()).length;
         assertEquals(expectedSize, actual,
-                String.format("Expected %03d exported folders, but found %03d", expectedSize, actual));
+                "Expected %03d exported folders, but found %03d".formatted(expectedSize, actual));
     }
 
     private static File[] getFiles(File file) {
         if (nonNull(file) && nonNull(file.listFiles())) {
-            assertTrue(file.listFiles().length > 0);
+            assertTrue(Objects.requireNonNull(file.listFiles()).length > 0);
             return file.listFiles();
         }
         throw new RuntimeException("File not found " + file.getPath());
