@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -36,7 +36,6 @@ import static org.qubership.atp.mia.ei.ExportImportTestUtils.validateFilenameCha
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.UUID;
@@ -368,7 +367,7 @@ public class ImportTestCornerCases extends ExportImportBaseTest {
 
         assertFalse(validationResult.isValid());
         assertFalse(validationResult.getDetails().isEmpty());
-        assertEquals(expectedMessage, validationResult.getDetails().get(0).getMessage());
+        assertEquals(expectedMessage, validationResult.getDetails().getFirst().getMessage());
     }
 
     @Test
@@ -380,7 +379,7 @@ public class ImportTestCornerCases extends ExportImportBaseTest {
 
         assertFalse(validationResult.isValid());
         assertFalse(validationResult.getDetails().isEmpty());
-        assertEquals(expectedMessage, validationResult.getDetails().get(0).getMessage());
+        assertEquals(expectedMessage, validationResult.getDetails().getFirst().getMessage());
     }
 
     @Test
@@ -419,10 +418,10 @@ public class ImportTestCornerCases extends ExportImportBaseTest {
         testPath.set(copyTestDataToWorkingDirectory(testInfo));
 
         //Prepare like in base test class
-        testProjectConfiguration.get().setDirectories(new ArrayList<ProjectDirectory>() {{
+        testProjectConfiguration.get().setDirectories(new ArrayList<>() {{
             add(directoryConfigurations.get().get("/rootDirectory0"));
         }});
-        testProjectConfiguration.get().setFiles(new ArrayList<ProjectFile>() {{
+        testProjectConfiguration.get().setFiles(new ArrayList<>() {{
             add(fileConfigurations.get().get("rootDirectory0_File1.txt"));
         }});
 
@@ -463,7 +462,7 @@ public class ImportTestCornerCases extends ExportImportBaseTest {
 
     public Path copyTestDataToWorkingDirectory(TestInfo testInfo) {
         String testFolder = "src/test/resources/ei/import/CornerCases/";
-        Path testPath = Paths.get(testFolder).resolve(testInfo.getTestMethod().get().getName());
+        Path testPath = Path.of(testFolder).resolve(testInfo.getTestMethod().get().getName());
         try {
             FileUtils.copyDirectory(testPath.toFile(), path.get().toFile());
             return testPath;
