@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -22,14 +22,15 @@ import static org.qubership.atp.mia.model.Constants.DEFAULT_PROJECT_NAME;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ThreadLocalRandom;
 
-import org.junit.Assert;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -63,30 +64,30 @@ public class ExecuteCurrentStatement extends BaseIntegrationTestConfiguration {
 
     @BeforeEach
     public void beforeExecuteCurrentStatement() {
-        int randomId = (int) (Math.random() * 1000);
+        int randomId = (int) (ThreadLocalRandom.current().nextDouble() * 1000);
         UUID envId = new UUID(0, randomId+1);
         UUID systemId = new UUID(0, randomId+2);
         System testSystem2 = System.builder()
                 .id(systemId)
                 .name(TEST_SYSTEM_NAME + randomId)
                 .environmentId(envId)
-                .connections(Arrays.asList())
+                .connections(List.of())
                 .build();
         Environment testEnvironment2 = Environment.builder()
                 .projectId(projectId.get())
                 .id(envId)
                 .name(TEST_ENVIRONMENT_NAME + randomId)
-                .systems(Arrays.asList(testSystem2))
+                .systems(List.of(testSystem2))
                 .build();
         Project testProject2 = Project.builder()
                 .id(projectId.get())
                 .name(DEFAULT_PROJECT_NAME + randomId)
-                .environments(Arrays.asList(testEnvironment2.getId()))
+                .environments(List.of(testEnvironment2.getId()))
                 .build();
         Mockito.when(environmentsService.getEnvironmentsByProject(eq(projectId.get())))
-                .thenReturn(Arrays.asList(testEnvironment2));
+                .thenReturn(List.of(testEnvironment2));
         Mockito.when(environmentsService.getEnvironmentsFull(eq(envId), eq(projectId.get()))).thenReturn(testEnvironment2);
-        Mockito.when(environmentsService.getProjects()).thenReturn(Arrays.asList(testProject2));
+        Mockito.when(environmentsService.getProjects()).thenReturn(List.of(testProject2));
         Mockito.when(environmentsService.getProject(eq(projectId.get()))).thenReturn(testProject2);
         miaContext.setContext(projectId.get(), null);
     }
@@ -101,20 +102,22 @@ public class ExecuteCurrentStatement extends BaseIntegrationTestConfiguration {
 
     @Test
     public void executeInValidCurrentStatement() {
-        Assert.assertThrows(SqlExecuteFailException.class, () -> {
+        Assertions.assertThrows(SqlExecuteFailException.class, () -> {
             List<ProcessShortDto> processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-            Assert.assertEquals(24, processes.size());
+            Assertions.assertNotNull(processes);
+            Assertions.assertEquals(24, processes.size());
             //Add a Temporary Process
             String processName = "SSH_PWD";
             String validation = "select * from InvalidTable";
             UUID sectionId = processes.stream()
                     .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                     .findFirst().get()
-                    .getInSections().get(0);
-            ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), validation);
+                    .getInSections().getFirst();
+            ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), validation);
             miaConfigurationController.addProcess(projectId.get(), processDto);
             processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-            Assert.assertEquals(25, processes.size());
+            Assertions.assertNotNull(processes);
+            Assertions.assertEquals(25, processes.size());
             ExecutionRequest request = new ExecutionRequest();
             request.setSessionId(UUID.randomUUID());
             request.setProcess("SSH_PWD");
@@ -129,28 +132,29 @@ public class ExecuteCurrentStatement extends BaseIntegrationTestConfiguration {
             request.setFlowData(flowData);
             List<SqlResponse> sqlResponses = miaExecutionController.executeCurrentStatement(projectId.get(), "Test",
                     request).getBody();
-            Assert.assertEquals(1, sqlResponses.size());
+            Assertions.assertEquals(1, sqlResponses.size());
         });
     }
 
     @Test
     public void executeCurrentStatement_WhenListIsEmpty() {
-        Assert.assertThrows(CurrentStatementListIsEmptyException.class, () -> {
+        Assertions.assertThrows(CurrentStatementListIsEmptyException.class, () -> {
             List<ProcessShortDto> processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-            Assert.assertEquals(24, processes.size());
+            Assertions.assertEquals(24, processes.size());
             //Add a Temporary Process
             String processName = "SSH_PWD";
             String validation = "select * from InvalidTable";
             UUID sectionId = processes.stream()
                     .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                     .findFirst().get()
-                    .getInSections().get(0);
-            ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), validation);
+                    .getInSections().getFirst();
+            ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), validation);
             List<ValidationDto> emptyCurrentStatements = new ArrayList<>();
             processDto.getProcessSettings().setCurrentStatement(emptyCurrentStatements);
             miaConfigurationController.addProcess(projectId.get(), processDto);
             processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-            Assert.assertEquals(25, processes.size());
+            Assertions.assertNotNull(processes);
+            Assertions.assertEquals(25, processes.size());
 
             ExecutionRequest request = new ExecutionRequest();
             request.setSessionId(UUID.randomUUID());
@@ -166,25 +170,26 @@ public class ExecuteCurrentStatement extends BaseIntegrationTestConfiguration {
             request.setFlowData(flowData);
             List<SqlResponse> sqlResponses = miaExecutionController.executeCurrentStatement(projectId.get(), "Test",
                     request).getBody();
-            Assert.assertEquals(1, sqlResponses.size());
+            Assertions.assertEquals(1, sqlResponses.size());
         });
     }
 
     @Test
     public void executeValidCurrentStatement() {
         List<ProcessShortDto> processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-        Assert.assertEquals(24, processes.size());
+        Assertions.assertEquals(24, processes.size());
         //Add a Temporary Process
         String processName = "SSH_PWD";
         String validation = "select * from mia_table mt where id = 1";
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), validation);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), validation);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
-        Assert.assertEquals(25, processes.size());
+        Assertions.assertNotNull(processes);
+        Assertions.assertEquals(25, processes.size());
         ExecutionRequest request = new ExecutionRequest();
         request.setSessionId(UUID.randomUUID());
         request.setProcess("SSH_PWD");
@@ -199,12 +204,12 @@ public class ExecuteCurrentStatement extends BaseIntegrationTestConfiguration {
         request.setFlowData(flowData);
         List<SqlResponse> sqlResponses =
                 miaExecutionController.executeCurrentStatement(projectId.get(), "Test", request).getBody();
-        Assert.assertEquals(1, sqlResponses.size());
+        Assertions.assertEquals(1, sqlResponses.size());
     }
 
     @Test
     public void executeNonExistCurrentStatement() {
-        Assert.assertThrows(ProcessOrCompoundNotFoundException.class, () -> {
+        Assertions.assertThrows(ProcessOrCompoundNotFoundException.class, () -> {
             ExecutionRequest request = new ExecutionRequest();
             request.setSessionId(UUID.randomUUID());
             request.setProcess("SSH_PWD1");
