@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -38,7 +38,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import org.junit.Assert;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.InOrder;
 import org.mockito.Mockito;
@@ -84,6 +84,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         ProcessConfiguration processWithMarkers = DeserializerConfigBaseTest.getGenerationPp();
         List<String> passedMarkersList = new ArrayList<>();
         passedMarkersList.add("Process finishing with status \\d+");
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setPassedMarkerForLog(passedMarkersList);
         List<String> failedMarkersList = new ArrayList<>();
         failedMarkersList.add("Process \\w+ with status ");
@@ -92,7 +93,8 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         commandResponse.addLog(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = executeProcess(processWithMarkers.getProcessSettings());
-        Assert.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
+        Assertions.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
     }
 
     @Test
@@ -101,12 +103,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String failedMarker = "Process finishing with status \\d";
         List<String> failedMarkersList = new ArrayList<>();
         failedMarkersList.add(failedMarker);
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setFailedMarkersForLog(failedMarkersList);
         CommandResponse commandResponse = new CommandResponse();
         commandResponse.addCommandOutput(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = super.executeProcess(processWithMarkers.getProcessSettings()); //save and assert
-        Assert.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
+        Assertions.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
     }
 
     @Test
@@ -115,12 +119,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String passedMarker = "Process finishing with status \\d";
         List<String> passedMarkersList = new ArrayList<>();
         passedMarkersList.add(passedMarker);
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setPassedMarkerForLog(passedMarkersList);
         CommandResponse commandResponse = new CommandResponse();
         commandResponse.addCommandOutput(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = super.executeProcess(processWithMarkers.getProcessSettings());
-        Assert.assertEquals(executionResponse.getProcessStatus().getStatus(), Statuses.SUCCESS);
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
+        Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
     }
 
     @Test
@@ -128,9 +134,9 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         try {
             final CompoundConfiguration compound = CompoundConfiguration.builder().name("not exist").id(UUID.randomUUID()).build();
             executeCompound(compound);
-            Assert.fail("Exception should be on 'executeCompound'");
+            Assertions.fail("Exception should be on 'executeCompound'");
         } catch (RuntimeException e) {
-            Assert.assertEquals("MIA-0053: Compound with name 'not exist' has no processes!", e.getMessage());
+            Assertions.assertEquals("MIA-0053: Compound with name 'not exist' has no processes!", e.getMessage());
         }
     }
 
@@ -141,18 +147,18 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         sw.setName("stopOnFail");
         sw.setDisplay("Stop compound if one of processes is fail");
         sw.setValue(false);
-        request.get().setSystemSwitchers(Arrays.asList(sw));
+        request.get().setSystemSwitchers(List.of(sw));
         final LinkedList<ExecutionResponse> responses = executeCompound(compound);
-        Assert.assertEquals(12, responses.size());
+        Assertions.assertEquals(12, responses.size());
     }
 
     @Test
     public void executeCompound_whenOnlyCompoundName_thenExecuteProcessByDefaultAndStopOnPostalPayment() {
         CompoundConfiguration compound = DeserializerConfigBaseTest.getDefaultCompound();
         final LinkedList<ExecutionResponse> responses = executeCompound(compound);
-        Assert.assertEquals(8, responses.size());
-        Assert.assertEquals(compound.getId(), responses.getFirst().getEntityId());
-        Assert.assertEquals("http://atp-mia.com/project/"
+        Assertions.assertEquals(8, responses.size());
+        Assertions.assertEquals(compound.getId(), responses.getFirst().getEntityId());
+        Assertions.assertEquals("http://atp-mia.com/project/"
                 + miaContext.get().getProjectId()
                 + "/mia/execution?entityId="
                 + compound.getId(), responses.getFirst().getEntityUrl());
@@ -164,23 +170,23 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundConfiguration.setReferToInput("toSkip");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
-        Assert.assertEquals(1, responses.size());
-        Assert.assertTrue(responses.get(0).getCommandResponse().getDescription().get(0).contains("SKIPPED Compound"));
-        Assert.assertEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertEquals(1, responses.size());
+        Assertions.assertTrue(responses.getFirst().getCommandResponse().getDescription().getFirst().contains("SKIPPED Compound"));
+        Assertions.assertEquals("WARNING", responses.getFirst().getProcessStatus().getStatus().name());
     }
 
     @Test
     public void executeCompound_toSkipOneProcess_withProcessReferToInput_WhenInputNotAvailable() {
         CompoundConfiguration compoundConfiguration = DeserializerConfigBaseTest.getDefaultCompound();
-        compoundConfiguration.getProcesses().get(0).getProcessSettings().setReferToInput("toSkip");
+        compoundConfiguration.getProcesses().getFirst().getProcessSettings().setReferToInput("toSkip");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
-        Assert.assertEquals(8, responses.size());
-        Assert.assertTrue(responses.get(0).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
-        Assert.assertNull(responses.get(1).getCommandResponse().getDescription());
-        Assert.assertEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
-        Assert.assertNotEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
-        compoundConfiguration.getProcesses().get(0).getProcessSettings().setReferToInput(null);
+        Assertions.assertEquals(8, responses.size());
+        Assertions.assertTrue(responses.get(0).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
+        Assertions.assertNull(responses.get(1).getCommandResponse().getDescription());
+        Assertions.assertEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertNotEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
+        compoundConfiguration.getProcesses().getFirst().getProcessSettings().setReferToInput(null);
     }
 
     @Test
@@ -189,11 +195,13 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput("SYSdateValue");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
-        Assert.assertEquals(8, responses.size());
-        Assert.assertTrue(responses.get(1).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
-        Assert.assertNull(responses.get(0).getCommandResponse().getDescription());
-        Assert.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
-        Assert.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertEquals(8, responses.size());
+        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
+        Assertions.assertNull(responses.get(0).getCommandResponse().getDescription());
+        Assertions.assertNotNull(responses.get(1).getProcessStatus());
+        Assertions.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
+        Assertions.assertNotNull(responses.get(0).getProcessStatus());
+        Assertions.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput(null);
     }
 
@@ -204,11 +212,11 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput("SYSdateValue");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
-        Assert.assertEquals(8, responses.size());
-        Assert.assertTrue(responses.get(1).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
-        Assert.assertNull(responses.get(0).getCommandResponse().getDescription());
-        Assert.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
-        Assert.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertEquals(8, responses.size());
+        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
+        Assertions.assertNull(responses.get(0).getCommandResponse().getDescription());
+        Assertions.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
+        Assertions.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
         //Cleanup
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput(null);
         miaContext.get().getFlowData().removeParameter("bill_period");
@@ -221,10 +229,10 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput("bill_period");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
-        Assert.assertEquals(8, responses.size());
-        Assert.assertNull(responses.get(1).getCommandResponse().getDescription());
-        Assert.assertEquals("SUCCESS", responses.get(1).getProcessStatus().getStatus().name());
-        Assert.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertEquals(8, responses.size());
+        Assertions.assertNull(responses.get(1).getCommandResponse().getDescription());
+        Assertions.assertEquals("SUCCESS", responses.get(1).getProcessStatus().getStatus().name());
+        Assertions.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
         //Cleanup
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput(null);
         miaContext.get().getFlowData().removeParameter("bill_period");
@@ -239,13 +247,13 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundInRequest.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compoundInRequest));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compoundInConfig));
+        miaContext.get().getConfig().setCompounds(Collections.singletonList(compoundInConfig));
         miaContext.get().getConfig().setProcesses(compoundInConfig.getProcesses());
         final List<ExecutionResponse> response = compoundService.get().executeCompound(request.get(), null);
         verify(sseEmitterService.get(), times(0)).sendEventWithExecutionResult(any());
-        Assert.assertNotNull(response.get(1));
-        Assert.assertEquals("echo 1;\ntestValue", response.get(1).getExecutedCommand());
-        Assert.assertEquals(compoundInConfig.getId(), response.get(1).getEntityId());
+        Assertions.assertNotNull(response.get(1));
+        Assertions.assertEquals("echo 1;\ntestValue", response.get(1).getExecutedCommand());
+        Assertions.assertEquals(compoundInConfig.getId(), response.get(1).getEntityId());
     }
 
     @Test
@@ -259,7 +267,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compound.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compound));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compound));
+        miaContext.get().getConfig().setCompounds(List.of(compound));
         miaContext.get().getConfig().setProcesses(compound.getProcesses());
         LinkedList<ExecutionResponse> responses = compoundService.get().executeCompound(request.get(), sseId);
         for (ExecutionResponse r:responses) {
@@ -280,7 +288,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compound.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compound));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compound));
+        miaContext.get().getConfig().setCompounds(List.of(compound));
         miaContext.get().getConfig().setProcesses(compound.getProcesses());
         LinkedList<ExecutionResponse> responses = compoundService.get().executeCompound(request.get(), sseId);
         for (ExecutionResponse r:responses) {
@@ -295,17 +303,19 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final CompoundConfiguration compound = CompoundConfiguration.builder()
                 .id(UUID.randomUUID())
                 .name(compoundName)
-                .processes(Arrays.asList(
+                .processes(Collections.singletonList(
                         ProcessConfiguration.builder().name("SQL_GPARAMS")
                                 .processSettings(ProcessSettings.builder()
-                                        .command(Command.builder().values(new LinkedHashSet<String>() {{add("some command");}})
+                                        .command(Command.builder().values(new LinkedHashSet<>() {{
+                                                    add("some command");
+                                                }})
                                                 .build())
                                         .build())
                                 .build()))
                 .build();
         executeCompound(compound);
         final CompoundConfiguration expectedCompound = miaContext.get().getConfig().getCompoundByName(compoundName);
-        expectedCompound.getProcesses().forEach(p -> Assert.assertEquals(p.getProcessSettings().getCommand().getToExecute(), p.getProcessSettings().getCommand().getValue()));
+        expectedCompound.getProcesses().forEach(p -> Assertions.assertEquals(p.getProcessSettings().getCommand().getToExecute(), p.getProcessSettings().getCommand().getValue()));
     }
     //PREREQUSITE TESTS
 
@@ -316,7 +326,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(ImmutableList.of(prerequisites)).command(command).build();
         executeProcess(process);
         verify(executionHelperService.get(), Mockito.times(1)).executeCommandOnLocalHost(eq("echo 123"));
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -324,7 +334,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         Map<String, String> params = new HashMap<>();
         params.put(input_name, input_value);
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        final ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+        final ArrayList<Prerequisite> prerequisites = new ArrayList<>();
         Prerequisite prerequisite = new Prerequisite("COMMAND_ON_LOCALHOST", TEST_SYSTEM_NAME, "echo 123");
         prerequisite.setReferToInputName(Collections.singletonList(input_name));
         prerequisites.add(prerequisite);
@@ -332,7 +342,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         miaContext.get().getFlowData().addParameters(params);
         executeProcess(process);
         verify(executionHelperService.get(), Mockito.times(1)).executeCommandOnLocalHost(eq("echo 123"));
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -343,9 +353,9 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         miaContext.get().getFlowData().setParameters(params);
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue :" + param));
         ArrayList<Prerequisite> prerequisites = new ArrayList<>();
-        final Prerequisite prerequisite1 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 1).setReferToInputName(Arrays.asList("Do update"));
+        final Prerequisite prerequisite1 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 1).setReferToInputName(List.of("Do update"));
         prerequisite1.setName(param + 1);
-        final Prerequisite prerequisite2 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 2).setReferToInputName(Arrays.asList("Do update"));
+        final Prerequisite prerequisite2 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 2).setReferToInputName(List.of("Do update"));
         prerequisite2.setName(param + 2);
         prerequisites.add(prerequisite1);
         prerequisites.add(prerequisite2);
@@ -360,11 +370,11 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         sqlResponse2.setQuery(sqlPrerequisiteValue + 2);
         sqlResponse2.setData(dbTable2);
         sqlResponse2.setRecords(dbTable2.getData().size());
-        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 1), anyString())).thenReturn(Arrays.asList(new CommandResponse(sqlResponse1)));
-        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 2), anyString())).thenReturn(Arrays.asList(new CommandResponse(sqlResponse2)));
+        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 1), anyString())).thenReturn(List.of(new CommandResponse(sqlResponse1)));
+        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 2), anyString())).thenReturn(List.of(new CommandResponse(sqlResponse2)));
         executeProcess(process);
-        Assert.assertEquals("1", miaContext.get().getFlowData().getParameters().get(param + 1));
-        Assert.assertEquals("3", miaContext.get().getFlowData().getParameters().get(param + 2));
+        Assertions.assertEquals("1", miaContext.get().getFlowData().getParameters().get(param + 1));
+        Assertions.assertEquals("3", miaContext.get().getFlowData().getParameters().get(param + 2));
     }
 
     @Test
@@ -373,7 +383,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(false, false)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(1)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -381,7 +391,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         miaContext.get().getFlowData().setParameters(null);
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
         final ArrayList<Prerequisite> prerequisites = new ArrayList<>();
-        prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setReferToInputName(Arrays.asList("param")));
+        prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setReferToInputName(List.of("param")));
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
@@ -410,7 +420,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(false, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(1)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -419,20 +429,20 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(false, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals("other_command_value", command.getToExecute());
+        Assertions.assertEquals("other_command_value", command.getToExecute());
     }
 
     @Test
     public void executePrerequisites_whenReferToInputName_AndInputIsFilled() {
-        miaContext.get().getFlowData().setParameters(new HashMap<String, String>() {{
+        miaContext.get().getFlowData().setParameters(new HashMap<>() {{
             put(input_name, input_value);
         }});
         Input input = new Input(input_name, "type", "value");
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).inputs(Arrays.asList(input)).prerequisites(createPrerequisites(true, false)).command(command).build();
+        final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).inputs(List.of(input)).prerequisites(createPrerequisites(true, false)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(1)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -445,20 +455,20 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(true, false)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
     public void executePrerequisites_whenReferToInputName_AndReferToComValue_AndComValueIsEqual_InputNotFilled() {
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        miaContext.get().getFlowData().setParameters(new HashMap<String, String>() {{
+        miaContext.get().getFlowData().setParameters(new HashMap<>() {{
             put(input_name, "");
             put("other_input_name", "input_value");
         }});
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(true, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -471,7 +481,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(true, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals("other_command_value", command.getToExecute());
+        Assertions.assertEquals("other_command_value", command.getToExecute());
     }
 
     @Test
@@ -483,7 +493,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(true, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(1)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals(commandValue, command.getToExecute());
+        Assertions.assertEquals(commandValue, command.getToExecute());
     }
 
     @Test
@@ -495,13 +505,13 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(createPrerequisites(true, true)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
-        Assert.assertEquals("other_command_value", command.getToExecute());
+        Assertions.assertEquals("other_command_value", command.getToExecute());
     }
 
     @Test
     public void executePrerequisites_whenTypeSQL_thenExecutePrerequisitesFirstAndCommandSecond() {
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
-        ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+        ArrayList<Prerequisite> prerequisites = new ArrayList<>();
         prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, "update "));
         prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue));
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
@@ -514,9 +524,9 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
 
     @Test
     public void executePrerequisites_whenTypeNotSupported_thenThrowException() {
-        Assert.assertThrows(PrerequisiteTypeUnsupportedException.class, () -> {
+        Assertions.assertThrows(PrerequisiteTypeUnsupportedException.class, () -> {
             final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
-            ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+            ArrayList<Prerequisite> prerequisites = new ArrayList<>();
             prerequisites.add(new Prerequisite("SOAP", TEST_SYSTEM_NAME, sqlPrerequisiteValue));
             final ProcessSettings process =
                     new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
@@ -531,7 +541,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         prerequisites.add(new Prerequisite("SSH", TEST_SYSTEM_NAME, sqlPrerequisiteValue));
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
         executeProcess(process);
-        Assert.assertEquals(commandValue, process.getCommand().getToExecute());
+        Assertions.assertEquals(commandValue, process.getCommand().getToExecute());
     }
 
     @Test
@@ -541,7 +551,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final Prerequisite prerequisite2 = new Prerequisite("SSH", TEST_SYSTEM_NAME, sqlPrerequisiteValue);
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(ImmutableList.of(prerequisite1, prerequisite2)).command(command).build();
         executeProcess(process);
-        Assert.assertEquals(commandValue, process.getCommand().getToExecute());
+        Assertions.assertEquals(commandValue, process.getCommand().getToExecute());
     }
 
     @Test
@@ -556,10 +566,10 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
     @Test
     public void executeProcess_whenAtpValuesInCommand_thenGetCommandByLabel() {
         final ProcessSettings process = DeserializerConfigBaseTest.getSql().getProcessSettings();
-        Assert.assertEquals("select * from gparams where name like '%SYSdate%'", process.getCommand().getToExecute());
+        Assertions.assertEquals("select * from gparams where name like '%SYSdate%'", process.getCommand().getToExecute());
         request.get().setCommand("UPDATE");
         executeProcess(process);
-        Assert.assertEquals("select * from gparams where name like '%SYSdate%'", process.getCommand().getToExecute());
+        Assertions.assertEquals("select * from gparams where name like '%SYSdate%'", process.getCommand().getToExecute());
     }
 
     @Test
@@ -576,12 +586,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
     @Test
     public void executeProcess_whenSwitcherisPresent_andProcessCommandtypeisSQL() {
         final ProcessSettings process = DeserializerConfigBaseTest.getSqlforswitcher().getProcessSettings();
-        Assert.assertNull(process.getPrerequisites());
+        Assertions.assertNull(process.getPrerequisites());
         ExecutionResponse executionResponse = executeProcessforSwitcher(process);
-        Assert.assertEquals(2, executionResponse.getPrerequisites().size());
-        Assert.assertEquals(CommandResponse.CommandResponseType.SQL,
+        Assertions.assertEquals(2, executionResponse.getPrerequisites().size());
+        Assertions.assertEquals(CommandResponse.CommandResponseType.SQL,
                 executionResponse.getPrerequisites().get(0).getType());
-        Assert.assertEquals(CommandResponse.CommandResponseType.SQL,
+        Assertions.assertEquals(CommandResponse.CommandResponseType.SQL,
                 executionResponse.getPrerequisites().get(1).getType());
     }
 
@@ -590,7 +600,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         when(sshService.get().executeSingleCommand(any())).thenReturn(new CommandResponse());
         final ProcessSettings process = DeserializerConfigBaseTest.getBgforswitcher().getProcessSettings();
         ExecutionResponse executionResponse = executeProcessforSwitcher(process);
-        Assert.assertEquals("export TRACE_LEVEL=FULL\nexport TRACE_ALL=ON\nBG -a \"-a :accountNumber\"",
+        Assertions.assertEquals("export TRACE_LEVEL=FULL\nexport TRACE_ALL=ON\nBG -a \"-a :accountNumber\"",
                 executionResponse.getExecutedCommand());
     }
 
@@ -611,20 +621,20 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         actualResultForQuery.put("max_bill_seq", "8");
         actualResultForQuery.put("action_dat", "2019-04-19 00:00:00.0");
         final Validation validation = new Validation("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setTableName("ACCOUNTPAYATTRIBUTES").setTableMarker(new TableMarker().setTableRowCount(">0").setExpectedResultForQuery(expectedResultForQuery));
-        List<Validation> listValidation = Arrays.asList(validation);
+        List<Validation> listValidation = Collections.singletonList(validation);
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).validations(ImmutableList.of(validation)).build();
         final DbTable dbTable = new DbTable(ImmutableList.of("account_num", "bill_seq", "max_bill_seq", "action_dat"), ImmutableList.of(ImmutableList.of("123456", "1", "8", "2019-04-19 00:00:00.0")));
         SqlResponse sqlResponse = new SqlResponse();
         sqlResponse.setQuery(sqlPrerequisiteValue);
         sqlResponse.setData(dbTable);
         sqlResponse.setRecords(dbTable.getData().size());
-        List<SqlResponse> validationResponses = Arrays.asList(sqlResponse);
+        List<SqlResponse> validationResponses = List.of(sqlResponse);
         when(sqlService.get().executeValidations(eq(listValidation), eq(command))).thenReturn(validationResponses);
         ExecutionResponse executionResponse = executeProcess(process);
-        Assert.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
+        Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
         for (SqlResponse validationResponse : executionResponse.getValidations()) {
             for (TableMarkerResult.TableMarkerColumnStatus columnStatus : validationResponse.getTableMarkerResult().getColumnStatuses()) {
-                Assert.assertEquals(Statuses.SUCCESS, columnStatus.getStatus());
+                Assertions.assertEquals(Statuses.SUCCESS, columnStatus.getStatus());
             }
             List<String> expectedResultTableRow = new ArrayList<>();
             expectedResultTableRow.add("ER");
@@ -632,11 +642,11 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
             expectedResultTableRow.add("---");
             expectedResultTableRow.add("<10");
             expectedResultTableRow.add("2019-04-19 00:00:00.0");
-            Assert.assertEquals(expectedResultTableRow, validationResponse.getData().getData().get(0));
+            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().getFirst());
             List<String> actualResultTableRow = new ArrayList<>();
             actualResultTableRow.add("AR");
             actualResultTableRow.addAll(actualResultForQuery.values());
-            Assert.assertEquals(actualResultTableRow, validationResponse.getData().getData().get(1));
+            Assertions.assertEquals(actualResultTableRow, validationResponse.getData().getData().get(1));
         }
     }
 
@@ -659,20 +669,21 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         File file = new File("src/main/config/project/default/flow/test1.sql");
         Mockito.doReturn(file).when(fileService.get()).getFile(Mockito.anyString());
         final Validation validation = new Validation("SQL", TEST_SYSTEM_NAME, sqlFileValue).setTableName("ACCOUNT").setTableMarker(new TableMarker().setTableRowCount(">0").setExpectedResultForQuery(expectedResultForQuery));
-        List<Validation> listValidation = Arrays.asList(validation);
+        List<Validation> listValidation = Collections.singletonList(validation);
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).validations(ImmutableList.of(validation)).build();
         final DbTable dbTable = new DbTable(ImmutableList.of("account_num", "bill_seq", "max_bill_seq", "action_dat"), ImmutableList.of(ImmutableList.of("123456", "1", "8", "2019-04-19 00:00:00.0")));
         SqlResponse sqlResponse = new SqlResponse();
         sqlResponse.setQuery(sqlPrerequisiteValue);
         sqlResponse.setData(dbTable);
         sqlResponse.setRecords(dbTable.getData().size());
-        List<SqlResponse> validationResponses = Arrays.asList(sqlResponse);
+        List<SqlResponse> validationResponses = List.of(sqlResponse);
         when(sqlService.get().executeValidations(eq(listValidation), eq(command))).thenReturn(validationResponses);
         ExecutionResponse executionResponse = executeProcess(process);
-        Assert.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
+        Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
         for (SqlResponse validationResponse : executionResponse.getValidations()) {
             for (TableMarkerResult.TableMarkerColumnStatus columnStatus : validationResponse.getTableMarkerResult().getColumnStatuses()) {
-                Assert.assertEquals(Statuses.SUCCESS, columnStatus.getStatus());
+                Assertions.assertEquals(Statuses.SUCCESS, columnStatus.getStatus());
             }
             List<String> expectedResultTableRow = new ArrayList<>();
             expectedResultTableRow.add("ER");
@@ -680,12 +691,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
             expectedResultTableRow.add("---");
             expectedResultTableRow.add("<10");
             expectedResultTableRow.add("2019-04-19 00:00:00.0");
-            Assert.assertEquals(expectedResultTableRow, validationResponse.getData().getData().get(0));
-            System.out.println(validationResponse.getData().getData().get(0));
+            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().getFirst());
+            System.out.println(validationResponse.getData().getData().getFirst());
             List<String> actualResultTableRow = new ArrayList<>();
             actualResultTableRow.add("AR");
             actualResultTableRow.addAll(actualResultForQuery.values());
-            Assert.assertEquals(actualResultTableRow, validationResponse.getData().getData().get(1));
+            Assertions.assertEquals(actualResultTableRow, validationResponse.getData().getData().get(1));
             System.out.println(validationResponse.getData().getData().get(1));
         }
     }
@@ -695,8 +706,8 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String expectedBillDate = "2205";
         String accountNumber = "123";
         when(sqlService.get().getNextBillDate()).thenReturn(expectedBillDate);
-        String actualBillDate = executionHelperService.get().getNextBillDate().toString();
-        Assert.assertEquals(expectedBillDate, actualBillDate);
+        String actualBillDate = executionHelperService.get().getNextBillDate();
+        Assertions.assertEquals(expectedBillDate, actualBillDate);
     }
 
     @Test
@@ -705,14 +716,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final Validation validation = new Validation("SQL", ":customSystem", sqlPrerequisiteValue);
         final Prerequisite prerequisites = new Prerequisite("SSH", ":customSystem", sqlPrerequisiteValue);
         Input input = new Input(input_name, "type", "Billing System");
-        ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).prerequisites(Arrays.asList(prerequisites)).inputs(Arrays.asList(input)).validations(Arrays.asList(validation)).build();
+        ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).prerequisites(List.of(prerequisites)).inputs(List.of(input)).validations(List.of(validation)).build();
         HashMap<String, String> params = new HashMap<>();
         params.put("customSystem", "Billing System");
         miaContext.get().getFlowData().setParameters(params);
         process = executionHelperService.get().replaceProcessSystems(process);
-        Assert.assertEquals(process.getCommand().getSystem(), "Billing System");
-        Assert.assertEquals(process.getPrerequisites().get(0).getSystem(), "Billing System");
-        Assert.assertEquals(process.getValidations().get(0).getSystem(), "Billing System");
+        Assertions.assertEquals("Billing System", process.getCommand().getSystem());
+        Assertions.assertEquals("Billing System", process.getPrerequisites().getFirst().getSystem());
+        Assertions.assertEquals("Billing System", process.getValidations().getFirst().getSystem());
     }
 
     @Test
@@ -724,7 +735,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         Mockito.doReturn(file).when(fileService.get()).getFile(Mockito.anyString());
         Link actualLink = miaContext.get().zipCommandOutputs(projId, filePaths);
         final String name = "Test_Process_\\d+.zip";
-        Assert.assertEquals(actualLink.getPath().substring(0, 55), "/rest/downloadFile/" + projectId.get());
+        Assertions.assertEquals(actualLink.getPath().substring(0, 55), "/rest/downloadFile/" + projectId.get());
     }
 
     private List<Prerequisite> createPrerequisites(boolean setInputReference, boolean setCommandReference) {
@@ -732,12 +743,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final Prerequisite sshPrerequisite = new Prerequisite("SSH", "Billing System", sshPrerequisiteValue);
         final Prerequisite sqlPrerequisite = new Prerequisite("SQL", "Billing System", sqlPrerequisiteValue);
         if (setCommandReference) {
-            sshPrerequisite.setReferToCommandValue(Arrays.asList(commandValue));
-            sqlPrerequisite.setReferToCommandValue(Arrays.asList(commandValue));
+            sshPrerequisite.setReferToCommandValue(List.of(commandValue));
+            sqlPrerequisite.setReferToCommandValue(List.of(commandValue));
         }
         if (setInputReference) {
-            sshPrerequisite.setReferToInputName(Arrays.asList(input_name));
-            sqlPrerequisite.setReferToInputName(Arrays.asList(input_name));
+            sshPrerequisite.setReferToInputName(List.of(input_name));
+            sqlPrerequisite.setReferToInputName(List.of(input_name));
         }
         prerequisites.add(sshPrerequisite);
         prerequisites.add(sqlPrerequisite);
