@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -18,9 +18,9 @@
 package org.qubership.atp.mia.service;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -34,7 +34,6 @@ import static org.qubership.atp.mia.utils.Utils.listToSet;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -44,6 +43,7 @@ import java.util.List;
 
 import org.apache.commons.io.FileUtils;
 import org.hamcrest.text.MatchesPattern;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -81,24 +81,30 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
     private static final String fileName = "Rating_Matrix.xlsx";
     private static final String origFilePath = "src/test/resources/testData/" + fileName;
     private static final String accountNumber = "12345";
-    private ThreadLocal<GridFsRepository> gridFsRepository = new ThreadLocal<>();
-    private ThreadLocal<GridFsService> gridFsService = new ThreadLocal<>();
-    private ThreadLocal<SqlExecutionHelperService> sqlService = new ThreadLocal<>();
-    private ThreadLocal<SoapExecutionHelperService> soapService = new ThreadLocal<>();
-    private ThreadLocal<RestExecutionHelperService> restService = new ThreadLocal<>();
-    private ThreadLocal<ShellRepository> shellRepository = new ThreadLocal<>();
-    private ThreadLocal<TestDataRepository> testDataRepository = new ThreadLocal<>();
-    private ThreadLocal<TestDataService> testDataService = new ThreadLocal<>();
+
+    private final ThreadLocal<GridFsRepository> gridFsRepository = new ThreadLocal<>();
+    private final ThreadLocal<GridFsService> gridFsService = new ThreadLocal<>();
+    private final ThreadLocal<SqlExecutionHelperService> sqlService = new ThreadLocal<>();
+    private final ThreadLocal<SoapExecutionHelperService> soapService = new ThreadLocal<>();
+    private final ThreadLocal<RestExecutionHelperService> restService = new ThreadLocal<>();
+    private final ThreadLocal<TestDataRepository> testDataRepository = new ThreadLocal<>();
+    private final ThreadLocal<TestDataService> testDataService = new ThreadLocal<>();
+
+    private final ThreadLocal<SshSessionPool> sshSessionPool = new ThreadLocal<>();
+    private final ThreadLocal<ShellRepository> shellRepository = new ThreadLocal<>();
 
     @BeforeEach
-    public void before() throws IOException {
+    public void before() {
         gridFsRepository.set(mock(GridFsRepository.class));
         gridFsService.set(new GridFsService(gridFsRepository.get(), miaContext.get()));
         sqlService.set(mock(SqlExecutionHelperService.class));
         soapService.set(mock(SoapExecutionHelperService.class));
         restService.set(mock(RestExecutionHelperService.class));
-        shellRepository.set(spy(new ShellRepository(miaContext.get(), new SshSessionPool("300", "30000",
-                miaContext.get()), metricsService)));
+
+        SshSessionPool pool = new SshSessionPool("300", "30000", miaContext.get());
+        sshSessionPool.set(pool); // Store for cleanup
+        shellRepository.set(spy(new ShellRepository(miaContext.get(), pool, metricsService)));
+
         miaFileService.set(spy(new MiaFileService(gridFsService.get(), miaContext.get(), projectConfigurationService.get())));
         testDataRepository.set(new TestDataRepository(contextRepository,
                 sqlService.get(),
@@ -115,10 +121,10 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
         File dest = miaContext.get().getProjectPathWithType(ProjectFileType.MIA_FILE_TYPE_UPLOAD,
                 miaContext.get().getFlowData().getSessionId()).resolve(fileName).toFile();
         try {
-            FileUtils.copyFile(Paths.get(origFilePath).toFile(), dest);
-            FileUtils.copyFile(Paths.get("src/main/config/project/default/etalon_files/event_testData.dat").toFile(),
+            FileUtils.copyFile(Path.of(origFilePath).toFile(), dest);
+            FileUtils.copyFile(Path.of("src/main/config/project/default/etalon_files/event_testData.dat").toFile(),
                     projectDir.resolve("event_testData.dat").toFile());
-            FileUtils.copyFile(Paths.get("src/main/config/project/default/etalon_files/control_templ.dat").toFile(),
+            FileUtils.copyFile(Path.of("src/main/config/project/default/etalon_files/control_templ.dat").toFile(),
                     projectDir.resolve("control_templ.dat").toFile());
         } catch (IOException e) {
             //copied by other thread
@@ -127,6 +133,19 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
         testDataWorkbook.setScenariosToExecute(Utils.listToSet(Arrays.asList("Kirov non-National", "Kirov National")));
         testDataWorkbook.setExecuteSql(true);
         miaContext.get().getFlowData().setTestDataWorkbook(testDataWorkbook);
+    }
+
+    @AfterEach
+    public void after() {
+        // Shutdown the SshSessionPool
+        SshSessionPool pool = sshSessionPool.get();
+        if (pool != null) {
+            pool.shutdown();
+            sshSessionPool.remove();
+        }
+
+        // Clean up shellRepository
+        shellRepository.remove();
     }
 
     @Test
@@ -212,7 +231,7 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
         new MacrosRegistrator().register();
         final ProcessSettings process = DeserializerConfigBaseTest.getSshTestData().getProcessSettings();
         CommandResponse commandResponse = new CommandResponse(new CommandOutput("", "", false, miaContext.get()));
-        commandResponse.getCommandOutputs().get(0).setContent(
+        commandResponse.getCommandOutputs().getFirst().setContent(
                 new LinkedList<>(Arrays.asList("text1", "text2", "text3")));
         final Command newCommand = new Command(process.getCommand());
         newCommand.setToExecute("{ echo text1; echo text2; echo text3; }");
@@ -234,17 +253,17 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
     }
 
     @Test
-    public void validate() throws IOException {
+    public void validate() {
         final DbTable table1 = new DbTable(Arrays.asList("VALIDATED_Usage_Total_Cost", "VALIDATED_source",
                     "VALIDATED_type_id", "VALIDATED_dtm", "VALIDATED_attr_1", "VALIDATED_attr_2", "VALIDATED_attr_3",
                     "VALIDATED_attr_4", "VALIDATED_attr_5", "VALIDATED_attr_6", "VALIDATED_Attr_7", "VALIDATED_attr_8",
                     "VALIDATED_attr_9", "VALIDATED_attr_10", "VALIDATED_attr_11"),
-                    Arrays.asList(Arrays.asList(ExcelParserHelper.decimalFormat(1.22), "78332111111", "1",
-                            "2019/12/11-07-49-57.00", "78332865512", "78332111111", "2019/12/11-07-49-57.00", "2",
-                            "1", "5839139948", "7", "centrex", "OPTS-21", "ERROR: NO COLUMN RESULT", "")));
+                List.of(Arrays.asList(ExcelParserHelper.decimalFormat(1.22), "78332111111", "1",
+                        "2019/12/11-07-49-57.00", "78332865512", "78332111111", "2019/12/11-07-49-57.00", "2",
+                        "1", "5839139948", "7", "centrex", "OPTS-21", "ERROR: NO COLUMN RESULT", "")));
         final SqlResponse sqlResponse = new SqlResponse();
             sqlResponse.setData(table1);
-            List<CommandResponse> responses = Arrays.asList(new CommandResponse(sqlResponse));
+            List<CommandResponse> responses = List.of(new CommandResponse(sqlResponse));
         when(sqlService.get().executeCommand(anyString(), eq(testSystem.get().getName()), any(HashMap.class),
                 anyBoolean()))
                 .thenReturn(responses);
@@ -263,17 +282,17 @@ public class TestDataHelperServiceTest extends ConfigTestBean {
                         + "'YYYY/MM/DD-HH24-MI-SS') and event_attr_1='78332865512'"), eq(testSystem.get().getName()),
                 any(HashMap.class), anyBoolean());
             assertEquals(2, response.getSqlResponse().getRecords());
-            assertEquals("1", response.getSqlResponse().getData().getData().get(0).get(1));
-            assertEquals("17", response.getSqlResponse().getData().getData().get(0).get(2));
+            assertEquals("0", response.getSqlResponse().getData().getData().get(0).get(1));
+            assertEquals("18", response.getSqlResponse().getData().getData().get(0).get(2));
             assertEquals("0", response.getSqlResponse().getData().getData().get(1).get(1));
             assertEquals("13", response.getSqlResponse().getData().getData().get(1).get(2));
         LinkedList<ValidatedParameters> validateValue = testDataRepository.get().getTestDataWorkbook().getMainSheet()
-                    .getScenarios().get(0).getDescriptions().get(0).getValidatedParams();
+                    .getScenarios().getFirst().getDescriptions().getFirst().getValidatedParams();
             ValidatedParameters vp = validateValue.stream().filter(v -> v.getKey().equalsIgnoreCase(
                     "VALIDATED_attr_10")).findFirst().get();
             assertEquals("ERROR: NO COLUMN RESULT", vp.getValue());
             assertEquals(ValidatedParameters.State.PASSED, vp.getState());
-        validateValue = testDataRepository.get().getTestDataWorkbook().getMainSheet().getScenarios().get(0)
+        validateValue = testDataRepository.get().getTestDataWorkbook().getMainSheet().getScenarios().getFirst()
                     .getDescriptions().get(1).getValidatedParams();
             vp = validateValue.stream().filter(v -> v.getKey().equalsIgnoreCase("VALIDATED_attr_9")).findFirst().get();
             assertEquals("OPTS-21", vp.getValue());
